--- a/spring-java-rest/src/main/resources/application.properties
+++ b/spring-java-rest/src/main/resources/application.properties
@@ -6,4 +6,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL57Dialect
 logging.level.org.hibernate.SQL=debug
 spring.jpa.hibernate.ddl-auto=create-drop
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
 
